--- a/xmodeler/docs/css/guide.css
+++ b/xmodeler/docs/css/guide.css
@@ -66,7 +66,7 @@ body {
 
 /* Inverted outline button (white on dark) */
 .btn-outline-inverse {
-  color: #fff;
+  /* color: #a9a9a9; */
   background-color: transparent;
   /*border-color: #cdbfe3;*/
   border-color : #a9a9a9;
@@ -74,7 +74,7 @@ body {
 .btn-outline-inverse:hover,
 .btn-outline-inverse:focus,
 .btn-outline-inverse:active {
-  color: #563d7c;
+  /* color: #563d7c; */
   text-shadow: none;
   background-color: #fff;
   border-color: #fff;
