初步完成geting-start文档，支持代码高亮。

--- a/xmodeler/docs/css/guide.css
+++ b/xmodeler/docs/css/guide.css
@@ -208,7 +208,8 @@ body {
 
 .bs-docs-home,
 .bs-header {
-  color: #a9a9a9;
+  /* color: #a9a9a9; */
+  color : #565656;
   /* background-color: #563d7c; */
   background : url(../images/bg.jpg) repeat-x;
 }
