修改许可证为LGPL

--- a/xmodeler/docs/css/guide.css
+++ b/xmodeler/docs/css/guide.css
@@ -495,9 +495,10 @@ body {
 .bs-sidebar .nav > .active:hover > a,
 .bs-sidebar .nav > .active:focus > a {
   font-weight: bold;
-  color: #563d7c;
+  /* color: #563d7c; */
+  color : #428BCA;
   background-color: transparent;
-  border-right: 1px solid #563d7c;
+  border-right: 1px solid #428BCA;
 }
 
 /* Nav: second level (shown on .active) */
