修正了多选情况下连接线绘制错误的BUG 修正了在菜单中绘制连接线不能取得数据导致流程部署失败的问题

--- a/xmodeler/themes/default/css/style.css
+++ b/xmodeler/themes/default/css/style.css
@@ -50,6 +50,10 @@ ul.ctx-menu li.parallel-gateway {
 	list-style-image: url(../images/parallel_gateway16.png);
 }
 
+ul.ctx-menu li.exclusive-gateway {
+    list-style-image: url(../images/exclusive-gateway16.png);
+}
+
 ul.ctx-menu li.delete{
 	list-style-image: url(../images/delete.png);
 }
